Fix name column when horizontal scrolling

--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -108,6 +108,10 @@ h2 {
   text-align: center;
 }
 
+.report_row {
+  height: 23px;
+}
+
 .level_current {
   position: relative;
   border: 3px solid yellow;
